--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; URL='https://docs.google.com/spreadsheets/d/e/2PACX-1vThxMRR3t2tUuR6FSKE6aqVm-KxtFVJKJKL3vQDvvT3hm_0-52KTdZo0YEpnQE2izrG3OkkzjNG1qjc/pubhtml?gid=0&single=true'">
+    <title>NRA Online</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <p>Redirecting to your Google Doc...</p>
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vThxMRR3t2tUuR6FSKE6aqVm-KxtFVJKJKL3vQDvvT3hm_0-52KTdZo0YEpnQE2izrG3OkkzjNG1qjc/pubhtml?gid=0&single=true"></iframe>
 </body>
 </html>
